# Coach-Clippi

./: .env  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CoachClippiWrapper.sln  CoachClippiWrapper.vcxproj  CoachClippiWrapper.vcxproj.filters  ElectronOverlay.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  Launch Slippi Coach.bat  LaunchSlippiOverlay.bat  README - Melee Community.txt  README.md  SETUP.bat  SLIPPI_OVERLAY_README.md  Stop Slippi Coach.bat  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.sh  cmake_install.cmake  package-lock.json  package.json  test_electron_overlay.bat  test_window_detection.ps1
CoachClippiWrapper.dir/Debug/: CoachClippiWrapper_d.exe.recipe
CoachClippiWrapper.dir/Debug/CoachCli.53FED399.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Coaching.jsx  Commentary.jsx  Dashboard.jsx  IntegratedGameViewer.jsx  Layout.jsx  LiveMonitoring.jsx  ReplayAnalysis.jsx  Settings.jsx
frontend/src/hooks/: useSocket.js
src/: aiCoaching.js  alt-index.js  currentGameMonitor.js  electronCapture.js  enhancedCommentary.js  enhancedCommentary.patched.js  enhancedLiveMonitor.js  enhancedTechnicalCoaching.js  enhancedcoach.js  fileMonitor.js  filebasedindex.js  hybridCommentary.js  index.js  integratedApp.js  integratedCommentary.js  liveCommentary.js  liveMonitor.js  liveSlpMonitor.js  realTimeIndex.js  responseParser.js  slippiProcessor.js  templateCoachingSystem.js  templateCommentary.js  templateCommentarySystem.js  webServer.js
src/native-wrapper/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CoachClippiWrapper.sln  CoachClippiWrapper.vcxproj  CoachClippiWrapper.vcxproj.filters  CoachingInterface.cpp  CoachingInterface.h  GameDataInterface.cpp  GameDataInterface.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Launch-CoachClippi.bat  README.md  SETUP-GUIDE.md  WindowManager.cpp  WindowManager.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-direct.bat  build-mingw.bat  build-setup.md  build.bat  cmake_install.cmake  main.cpp
src/native-wrapper/CoachClippiWrapper.dir/Debug/CoachCli.EFF4E725.tlog/: CL.10940.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/native-wrapper/imgui/: imconfig.h
src/native-wrapper/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/native-wrapper/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/overlay/: launcher.js  overlayManager.js
src/overlay/config/: overlayConfig.js
src/overlay/electron/: config.json  logger.js  main.js  nativeDetector.js  nwmDetector.js  overlay.html  package-lock.json  package.json  simpleDetector.js  slpDetector.js  windowDetector.js
src/overlay/injection/: CMakeLists.txt  build_dll.bat  overlay.cpp  overlay.exp  overlay.h  overlay.lib  overlay_simple.cpp  overlay_simple.h
src/overlay/native/: binding.gyp  package-lock.json  package.json
src/overlay/native/src/: communication.cpp  dll_injector.cpp  overlay_native.cpp  process_manager.cpp
src/utils/: configManager.js  constants.js  frameDataAnalyzer.js  llmProviders.js  logger.js  providerSelector.js  slippiUtils.js
src/utils/api/: configureGeminiRequest.js  extractGeminiContent.js  geminiTokenManager.js  handleGeminiRequest.js  inspectGeminiResponse.js  localGeminiProxy.js  openaiHandler.js
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
